<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundparky"
    tools:context=".ParkingDetailActivity">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:src="@drawable/parkyimage"
        android:contentDescription="@string/appIcon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DetailsTitle"
        android:layout_marginTop="-10dp"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailsPrice"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:id="@+id/activity_parking_detail_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="30dp"
                android:text="@string/DetailsNoDetailsPrice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailsAvailDate"
                android:textSize="20sp"
                android:inputType="number"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                tools:ignore="TextViewEdits" />


            <TextView
                android:id="@+id/activity_parking_detail_availdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="30dp"
                android:text="@string/DetailsNoDetailsAvailDate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailsAvailTime"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:id="@+id/activity_parking_detail_availtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="30dp"
                android:text="@string/DetailsNoDetailsAvailTime" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailsLargeCar"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:id="@+id/activity_parking_detail_largecar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="30dp"
                android:text="@string/DetailsNoDetailsLargeCar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailsTypePark"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:id="@+id/activity_parking_detail_typeparking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="30dp"
                android:text="@string/DetailsNoDetailsParkyType"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailsCityCentr"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp" />

            <TextView
                android:id="@+id/activity_parking_detail_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="30dp"
                android:text="@string/DetailsNoDetailsCityCenter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailsPublicTransp"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp" />

            <TextView
                android:id="@+id/activity_parking_detail_transport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="30dp"
                android:text="@string/DetailsNoDetailsPublicTransport" />

            <Button
                android:id="@+id/activity_parking_detail_book"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/DetailsButtonBook"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="left"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_corners"
                tools:ignore="RtlCompat,RtlHardcoded" />

            <TextView
                android:id="@+id/activity_parking_detail_status"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/DetailsButtonMsg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toEndOf="@+id/submit"
                app:layout_constraintTop_toBottomOf="@+id/content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>