<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundparky"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:src="@drawable/parkyimage"
        android:contentDescription="@string/appIcon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainQuestion"
        android:fontFamily="casual"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <Button
        android:id="@+id/activity_main_write"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:text="@string/MainButtonProvide"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corners"
        android:textColor="#FFFFFF"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/activity_main_read"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:text="@string/MainButtonBook"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corners"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"/>


</LinearLayout>